<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

/**
 * @property-read \App\Models\User $user
 * @property-read \App\Models\News $news
 */
class Comment extends Model
{
    use HasFactory;

    protected $fillable = ['news_id', 'user_id', 'content'];

    /**
     * @return \Illuminate\Database\Eloquent\Relations\BelongsTo<News, Comment>
     */
    public function news()
    {
        return $this->belongsTo(News::class);
    }

    /**
     * @return \Illuminate\Database\Eloquent\Relations\BelongsTo<User, Comment>
     */
    public function user()
    {
        return $this->belongsTo(User::class);
    }
}
