<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class Nds extends Model
{
    use HasFactory;

    protected $fillable = [
        'title',
        'code_name',
        'percent',
    ];
}
